--- a/index.html
+++ b/index.html
@@ -19,54 +19,54 @@
 
       <div class="main">
         <div class="top">
-          <button id="index" onclick="info()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+          <button id="info"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
           </svg></button>
           <div id="name">my calculator</div>
-          <button id="settings" onclick="displayButtonInfo(id)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
+          <button id="settings" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
             <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
             <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
           </svg></button>
-          <button id="mode" onclick="displayButtonInfo(id)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
+          <button id="mode"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
             <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
           </svg></button>
           <div id="res"></div>
-          <button id="back" onclick="displayButtonInfo(id)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
+          <button id="back"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z"/>
           </svg></button>
-          <button id="history" onclick="displayButtonInfo(id)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
+          <button id="history"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
             <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022l-.074.997zm2.004.45a7.003 7.003 0 0 0-.985-.299l.219-.976c.383.086.76.2 1.126.342l-.36.933zm1.37.71a7.01 7.01 0 0 0-.439-.27l.493-.87a8.025 8.025 0 0 1 .979.654l-.615.789a6.996 6.996 0 0 0-.418-.302zm1.834 1.79a6.99 6.99 0 0 0-.653-.796l.724-.69c.27.285.52.59.747.91l-.818.576zm.744 1.352a7.08 7.08 0 0 0-.214-.468l.893-.45a7.976 7.976 0 0 1 .45 1.088l-.95.313a7.023 7.023 0 0 0-.179-.483zm.53 2.507a6.991 6.991 0 0 0-.1-1.025l.985-.17c.067.386.106.778.116 1.17l-1 .025zm-.131 1.538c.033-.17.06-.339.081-.51l.993.123a7.957 7.957 0 0 1-.23 1.155l-.964-.267c.046-.165.086-.332.12-.501zm-.952 2.379c.184-.29.346-.594.486-.908l.914.405c-.16.36-.345.706-.555 1.038l-.845-.535zm-.964 1.205c.122-.122.239-.248.35-.378l.758.653a8.073 8.073 0 0 1-.401.432l-.707-.707z"/>
             <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0v1z"/>
             <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
           </svg></button>
-          <button id="reset" type="reset" onclick="displayButtonInfo(id)">reset</button>
-          <button id="divide" onclick="displayButtonInfo(id)">/</button>
+          <button id="reset" type="reset" >reset</button>
+          <button id="divide" class="operator">/</button>
         </div>
 
         <div class="middle">
-          <button id="seintific" onclick="displayButtonInfo(id)">sci</button>
-          <button id="b7" onclick="displayButtonInfo(id)">7</button>
-          <button id="b8" onclick="displayButtonInfo(id)">8</button>
-          <button id="b9" onclick="displayButtonInfo(id)">9</button>
-          <button id="multi" onclick="displayButtonInfo(id)">x</button>
-          <button id="api" onclick="displayButtonInfo(id)">api</button>
-          <button id="b4" onclick="displayButtonInfo(id)">4</button>
-          <button id="b5" onclick="displayButtonInfo(id)">5</button>
-          <button id="b6" onclick="displayButtonInfo(id)">6</button>
-          <button id="sub" onclick="displayButtonInfo(id)">-</button>
+          <button id="seintific" ><img src="./img/square-root-variable-solid.svg" type="" alt=""></button>
+          <button id="b7"  class="nums">7</button>
+          <button id="b8" class="nums">8</button>
+          <button id="b9" class="nums">9</button>
+          <button id="multi" class="operator">x</button>
+          <button id="api"><img src="./img/cloud-solid.svg" alt=""></button>
+          <button id="b4" class="nums">4</button>
+          <button id="b5" class="nums">5</button>
+          <button id="b6" class="nums">6</button>
+          <button id="sub" class="operator">-</button>
           <div id="m-empty"></div>
-          <button id="b1" onclick="displayButtonInfo(id)">1</button>
-          <button id="b2" onclick="displayButtonInfo(id)">2</button>
-          <button id="b3" onclick="displayButtonInfo(id)">3</button>
-          <button id="b+" onclick="displayButtonInfo(id)">+</button>
+          <button id="b1" class="nums">1</button>
+          <button id="b2" class="nums">2</button>
+          <button id="b3" class="nums">3</button>
+          <button id="b+" class="operator">+</button>
         </div>
         <div class="bottom">
           <div id="empty"></div>
-          <button id="b+-" onclick="displayButtonInfo(id)">+-</button>
-          <button id="b0" onclick="displayButtonInfo(id)">0</button>
-          <button id="point" onclick="displayButtonInfo(id)">.</button>
-          <button id="eq" onclick="displayButtonInfo(id)">=</button>
+          <button id="b+-" >+-</button>
+          <button id="b0" class="nums">0</button>
+          <button id="point" >.</button>
+          <button id="eq" >=</button>
           <div id="b-empty"></div>
         </div>
       </div>
@@ -89,6 +89,8 @@
       </div>
     </div>
 
-    <script src="./main.js"></script>
+    
+    <script src="./javascript/application.js"></script>
+    <script src="./javascript/calculator.js"></script>
   </body>
 </html>
