--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="middle">
-          <button id="seintific" ><img src="./img/square-root-variable-solid.svg" type="" alt=""></button>
+          <button id="seintific"><img src="./img/square-root-variable-solid.svg" type="" alt=""></button>
           <button id="b7"  class="nums">7</button>
           <button id="b8" class="nums">8</button>
           <button id="b9" class="nums">9</button>
@@ -90,7 +90,7 @@
     </div>
 
     
-    <script src="./javascript/application.js"></script>
-    <script src="./javascript/calculator.js"></script>
+    <script src="./ts/application.js"></script>
+    <script src="./ts/calculator.js"></script>
   </body>
 </html>
