--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 
     
-    <script src="./ts/application.js"></script>
-    <script src="./ts/calculator.js"></script>
+    <script src="./dist/out-tsc/application.js"></script>
+    <script src="./dist/out-tsc/calculator.js"></script>
   </body>
 </html>
