non sci mode working fine

--- a/html/config.html
+++ b/html/config.html
@@ -11,16 +11,16 @@
 
         <label for="background-color">Choose a background-color:</label>
         <select name="background-color" id="background-color">
-            <option value="orange">orange</option>
-            <option value="pink">pink</option>
-            <option value="green">greene</option>
+            <option value="orange">white</option>
+            <option value="pink">bisque</option>
+            <option value="green">darkcyan</option>
             <option value="blue">blue</option>
             <option value="black">black</option>
         </select>
         <br>
     
-        <label for="font family">Choose a font family:</label>
-        <select name="font family" id="font family">
+        <label for="font-family">Choose a font family:</label>
+        <select name="font family" id="font-family">
             <option value="serif">serif</option>
             <option value="sans serif">Arial, Helvetica, sans-serif</option>
             <option value="cursive">'Times New Roman', Times, serif</option>
