--- a/html/help.html
+++ b/html/help.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p>
+    <p class="contentForInfo">
       Developer’s name: Marina Lobanov<br />
       Calculator’s version: 1.0.0 <br />
       this is a calculetor
