--- a/html/config.html
+++ b/html/config.html
@@ -11,27 +11,27 @@
 
         <label for="background-color">Choose a background-color:</label>
         <select name="background-color" id="background-color">
-            <option value="orange">white</option>
-            <option value="pink">bisque</option>
-            <option value="green">darkcyan</option>
-            <option value="blue">blue</option>
             <option value="black">black</option>
+            <option value="#1d7dc1">blue</option>
+            <option value="rgb(0, 191, 127)">green</option>
+            <option value="rgb(234, 234, 176)">yellow</option>
+            <option value="white">white</option>
         </select>
         <br>
     
         <label for="font-family">Choose a font family:</label>
-        <select name="font family" id="font-family">
+        <select name="font-family" id="font-family">
             <option value="serif">serif</option>
-            <option value="sans serif">Arial, Helvetica, sans-serif</option>
-            <option value="cursive">'Times New Roman', Times, serif</option>
-            <option value="fantasy">Verdana, Geneva, Tahoma, sans-serif</option>
-            <option value="nonospace">'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif</option>
+            <option value="Arial, Helvetica, sans-serif">Arial, Helvetica, sans-serif</option>
+            <option value="Times New Roman', Times, serif">'Times New Roman', Times, serif</option>
+            <option value="Verdana, Geneva, Tahoma, sans-serif">Verdana, Geneva, Tahoma, sans-serif</option>
+            <option value="'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif</option>
         </select>
         <br>
     
         <label for="mode">Choose a mode:
             <input type="radio" id="darkmode" value="dark" name="mode">Dark mode
-            <input type="radio" id="lightmode" value="light" name="mode">Light mode
+            <input type="radio" id="lightmode" value="lightmode" name="mode">Light mode
         </label>
         </BR>
 
