--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script src="./dist/out-tsc/application.js"></script>
-    <script src="./dist/out-tsc/calculator.js"></script>
+    <script src="./js/calculator.js"></script>
+    <script src="./js/application.js"></script>
    
   </body>
 </html>
